--- a/KSpring02_BuyerThymeleaf-v3/src/main/resources/static/css/detail.css
+++ b/KSpring02_BuyerThymeleaf-v3/src/main/resources/static/css/detail.css
@@ -1,56 +1,106 @@
-section.buyer_detail {
-    width:80vw;
+/*
+section.detail, section.order_detail {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+div.user_info {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+div.user_info table {
+    width: 100%;
+    margin: 1rem auto;
+}
+
+div.user_btn, div.btn_order_detail {
+    display: flex;
+    margin-left: auto;
+}
+
+div.user_btn button, div.btn_order_detail button {
+    width: 15%;
+    text-align: center;
+    padding: 0.3rem;
+    display: block;
+}
+*/
+
+section.buyer_detail{
+    width: 80vw;
     margin:10px auto;
     display:flex;
 
-    border:1px solid ligtgray;
-
+    border:1px solid blue;
 }
+
+section.order_detail {
+    width: 60vw;
+    margin:10px auto;
+    display:flex;
+    flex-direction:column;
+}
+
 
 section.buyer_detail div {
     display:flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
 
-    width:50%;
+    margin: 0;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid green;
+}
 
-    margin:0;
-    padding:10px;
-    justify-content:center;
-    align-items:center;
-    border:1px solid lightgray;
+section.order_detail div {
+    display:flex;
+    flex-wrap: wrap;
+
+    margin: 0;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 section.buyer_detail label,
-section.buyer_detail span {
-    padding:0.5rem;
-    margin:0;
-    border:1px solid #ddd;
+section.buyer_detail span
+,section.order_detail label,
+section.order_detail span {
+    padding: 0.5rem;
+    margin:  0;
+    border: 1px solid #ddd;
 }
 
-section.buyer_detail label {
-    width:30%;
-    background-color:#eee;
+section.buyer_detail label, section.order_detail label {
+    width: 30%;
+    background: #eee;
 }
 
-section.buyer_detail span {
-    width:55%;
+section.buyer_detail span, section.order_detail span {
+    width: 55%;
 }
 
-button {
-    display:inline-block;
-    padding:10px 15px;
-    border:none;
-    outline:none;
-    margin:0px 5px;
-    border-radius:5px;
-}
-section.buyer_detail button:nth-of-type(1) {
+div.btn_order_detail button{
     background-color:skyblue;
     color:white;
 }
-section.buyer_detail button:nth-of-type(2) {
-    background-color:royalblue;
-    color:white;
+
+
+div.user_table {
+    width: 80%;
+    margin: 0 auto;
 }
 
+div.user_table table {
+    width: 100%;
+    margin: 1rem auto;
+}
+
+tr.total_tr th {
+    background: white;
+}
 
