--- a/KSpring03-ReadBook-v2/src/main/resources/templates/member/login.html
+++ b/KSpring03-ReadBook-v2/src/main/resources/templates/member/login.html
@@ -16,7 +16,7 @@
             <div class="input">
                 <div>
                     <input type="checkbox"/>
-                    <label>ID 기억하기</label>
+                    <label>로그인 유지하기(Remember Me)</label>
                 </div>
             </div>
             <div class="input btn_box left">
