--- a/KSpring03-ReadBook-V3/src/main/resources/templates/fragment/headerAndFooter.html
+++ b/KSpring03-ReadBook-V3/src/main/resources/templates/fragment/headerAndFooter.html
@@ -4,6 +4,6 @@
 </header>
 
 <footer th:fragment="footerFragment">
-    <address>CopyRight &copy;gyu250@naver.com</address>
+<!--    <h2>&copy;gyu250@naver.com</h2>-->
 </footer>
 
