--- a/KSpring03-ReadBook-V3/src/main/resources/templates/member/login.html
+++ b/KSpring03-ReadBook-V3/src/main/resources/templates/member/login.html
@@ -20,16 +20,16 @@
 
             </div>
             <div class="input">
-                <input name="username" placeholder="USER ID">
+                <input name="username" placeholder="아이디를 입력하세요">
             </div>
             <div class="input">
-                <input name="password" placeholder="USER PASSWORD" type="password">
+                <input name="password" placeholder="비밀번호를 입력하세요" type="password">
             </div>
             <div class="input">
                 <div>
                     <input type="checkbox">
                     <!-- Spring Security가 최신 버전일 때 지원됨. -->
-                    <label>Login 유지하기</label>
+                    <label>로그인 유지하기</label>
                 </div>
             </div>
             <div class="input btn_box left">
