--- a/KSpring03-ReadBook-V3/src/main/resources/static/css/main.css
+++ b/KSpring03-ReadBook-V3/src/main/resources/static/css/main.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'NEXON Lv2 Gothic Bold';
+}
+
+@font-face {
+    font-family: 'NEXON Lv2 Gothic Bold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body {
@@ -44,4 +52,22 @@ footer {
     color: white;
     text-align: center;
     padding: 5rem;
+}
+
+ul{
+    display:flex;
+    list-style: none;
+    background-color:black;
+    color:white;
+    font-weight: bold;
+    padding:1rem;
+}
+
+li{
+    cursor:pointer;
+    margin:10px;
+}
+
+li.login{
+    margin-left:auto;
 }
