--- a/KSpring03-ReadBook-V3/src/main/resources/templates/fragment/headerAndFooter.html
+++ b/KSpring03-ReadBook-V3/src/main/resources/templates/fragment/headerAndFooter.html
@@ -1,3 +1,9 @@
+<ul th:fragment="navFragment">
+    <li class="home">홈</li>
+    <li class="list">목록</li>
+    <li class="write">작성</li>
+    <li class="login">로그인</li>
+</ul>
 <header th:fragment="headerFragment">
     <h1>똑 소리나는 독서록</h1>
     <p>하루 한 쪽부터 시작하는 독서 운동!</p>
