--- a/KSpring03-ReadBook-V3/src/main/resources/templates/layout.html
+++ b/KSpring03-ReadBook-V3/src/main/resources/templates/layout.html
@@ -15,6 +15,7 @@
     <title>똑소리 독서록</title>
 </head>
 <body>
+    <th:block th:replace="fragment/headerAndFooter :: navFragment"></th:block>
     <th:block th:replace="fragment/headerAndFooter :: headerFragment"></th:block>
     <th:block layout:fragment="content"></th:block>
     <th:block th:replace="fragment/headerAndFooter :: footerFragment"></th:block>
