--- a/KSpring03-ReadBook-V3/src/main/resources/templates/fragment/headerAndFooter.html
+++ b/KSpring03-ReadBook-V3/src/main/resources/templates/fragment/headerAndFooter.html
@@ -2,7 +2,11 @@
     <li class="home">홈</li>
     <li class="list">목록</li>
     <li class="write">작성</li>
-    <li class="login">로그인</li>
+    <div class="nav_div">
+    <li class="mypage">내정보</li>
+<!--    <li class="logout">로그아웃</li>-->
+<!--    <li class="login">로그인</li>-->
+    </div>
 </ul>
 <header th:fragment="headerFragment">
     <h1>똑 소리나는 독서록</h1>
@@ -12,4 +16,7 @@
 <footer th:fragment="footerFragment">
 <!--    <h2>&copy;gyu250@naver.com</h2>-->
 </footer>
+<script>
+
+</script>
 
