--- a/KSpring03-ReadBook-V3/src/main/resources/templates/layout.html
+++ b/KSpring03-ReadBook-V3/src/main/resources/templates/layout.html
@@ -10,6 +10,7 @@
     <script th:inline="javascript">
         const rootPath= /*[[ @{/} ]]*/ null
     </script>
+    <script th:inline="javascript" th:src="@{/static/js/main.js}"></script>
     <link rel="stylesheet" th:href="@{/static/css/main.css}">
     <link rel="stylesheet" th:href="@{/static/css/form.css}">
     <title>똑소리 독서록</title>
