--- a/KSpring03-ReadBook-V3/src/main/resources/templates/member/mypage.html
+++ b/KSpring03-ReadBook-V3/src/main/resources/templates/member/mypage.html
@@ -1,17 +1,11 @@
-<!doctype html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mypage</title>
-</head>
-<body>
-    <h1>MyPage</h1>
-    <p>로그인한 사용자만 볼 수 있음</p>
-    <form method="post" th:action="@{/logout}">
-        <button>Logout</button>
-    </form>
-</body>
+<html lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{/layout}"
+      xmlns="http://www.w3.org/1999/html">
+<section layout:fragment="content" class="content">
+
+    <div class="mypage">
+        <label th:text="${USER.username}"></label>
+        <label th:text="${USER.password}"></label>
+    </div>
+
+</section>
 </html>
