--- a/KSpring03-ReadBook-V3/src/main/resources/templates/readBook/write.html
+++ b/KSpring03-ReadBook-V3/src/main/resources/templates/readBook/write.html
@@ -23,7 +23,7 @@
             <div class="input btn_box right">
                 <button type="submit" class="save">Save</button>
                 <button type="reset" class="reset">Reset</button>
-                <button type="button" class="list">List</button>
+                <button type="button" class="list" id="list">List</button>
             </div>
         </fieldset>
     </form>
